deployments/radarr/radarr-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: servarr
spec:
  type: ClusterIP
  selector:
    app: radarr
  ports:
    - port: 7878
      targetPort: 7878
