deployments/radarr/radarr-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr
  namespace: servarr
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure
  hostnames:
    - "radarr.k3s-cluster.local.obleey.com"
  rules:
    - backendRefs:
        - name: radarr
          port: 7878
